# vsys_socket

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt
doc/: mailserver.dia
src/client/: CMakeLists.txt  Makefile  main.cpp
src/client/src/: Client.cpp  ServerResponseHandler.cpp  UserServerResponsePrinter.cpp  main.cpp
src/client/src/include/: Client.h  ServerResponseHandler.h  UserServerResponsePrinter.h
src/protocol/: CMakeLists.txt
src/protocol/include/: ClientRequest.h  ClientRequestParser.h  ClientRequestPrinter.h  ClientRequestVisitor.h  Mail.h  ServerResponse.h  ServerResponseParser.h  ServerResponsePrinter.h
src/protocol/src/: ClientRequestParser.cpp  ClientRequestPrinter.cpp  ServerResponsePrinter.cpp
src/protocol/test/: testServerResponse.cpp  test_protocol.cpp
src/server/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  MailServer.cpp  MailServer.h  Makefile  main.cpp
src/server/database/: Database.h
src/server/include/: include.h
src/server/src/: ClientConnection.cpp  ClientConnection.h  MailServer.cpp  MailServer.h  ServerResponseGenerator.cpp  ServerResponseGenerator.h  main.cpp
src/server/src/database/: Database.cpp  Database.h
src/server/src/database/include/: Database.h  Message.h
src/server/src/include/: ClientConnection.h  MailServer.h  ServerResponseGenerator.h
src/server/src/ldap/: LDAPAuthenticator.h
src/server/test/: test_serverResponseGenerator.cpp
src/server/test/database/: test_database.cpp
src/shared/: Clientsocket.h  Makefile  Serversocket.cpp  Serversocket.h  Socket.cpp  Socket.h  socket.cpp  socket.h
src/shared/database/: Database.cpp  Database.h  Message.h
src/shared/database/include/: include.h
src/shared/include/: include.h
src/shared/protocol/: ClientRequest.h  ClientRequestPrinter.cpp
src/shared/socket/: Clientsocket.cpp  Clientsocket.h  Socket.cpp  Socket.h  socket.cpp
src/shared/socket/include/: include.h
src/socket/: CMakeLists.txt
src/socket-lib/: Serversocket.h  Socket.h
src/socket-lib/include/: include.h
src/socket-lib/protocol/: ClientRequest.h  ClientRequestParser.cpp  ClientRequestParser.h  ClientRequestPrinter.cpp  ClientRequestPrinter.h  ClientRequestVisitor.h
src/socket/include/: Clientsocket.h  Serversocket.h  Socket.h
src/socket/src/: Clientsocket.cpp  Serversocket.cpp  Socket.cpp
src/socket/test/: test_socket.cpp
test/client/: test_client.cpp
test/server/: test_server.cpp
test/server/database/: test_database.cpp
test/shared/: test_library.cpp
test/shared/database/: test_database.cpp
test/shared/protocol/: test_protocol.cpp
test/shared/socket/: test_socket.cpp
test/socket-lib/: test_library.cpp
